tests/snapshot/error/source_locations/expression/yield_star/iterator_close_throws.exp
Error: 
  ┌ source_locations/expression/yield_star/iterator_close_throws.js:8:15
  |
8 |         throw new Error();
  |               ^
Stack trace:
  at get return (source_locations/expression/yield_star/iterator_close_throws.js:8:15)
  at generator (source_locations/expression/yield_star/iterator_close_throws.js:15:3)
  at throw (<native>)
  at <global> (source_locations/expression/yield_star/iterator_close_throws.js:20:1)